--- a/week6/jordan-pals_week4/index.html
+++ b/week6/jordan-pals_week4/index.html
@@ -17,7 +17,13 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
+    <nav>
+      <ul id="nav-li">
+        <li><a href="index.html" class="nav-item">HOME</a></li>
+        <li><a href="form.html" class="nav-item">CONTACT</a></li>
+      </ul>
+    </nav>
+    <div id="container-home" class="container">
       <section id="container-section">
         <p id="paragraph"></p>
         <button class="button" id="button" onclick="makePhrase()">
