added scrolltrigger animations

--- a/WEBD1121_Unit13_Jordan_Pals/index.html
+++ b/WEBD1121_Unit13_Jordan_Pals/index.html
@@ -8,21 +8,26 @@
     , initial-scale=1.0"
     />
     <title>WEBD1121_Unit13_Jordan_Pals</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="jquery-3.0.0.js">
-
-    
-
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="jquery-3.0.0.js" />
+    <link rel="stylesheet" href="app.js" />
   </head>
   <body>
     <div class="container1"></div>
     <div class="container2">
-        <div class="container3">
-            <div id="box1"></div>
-            <div id="box2"></div>
-            <div id="box3"></div>
-
-        </div>
+      <div class="container3">
+        <div id="box1"></div>
+        <div id="box2"></div>
+        <div id="box3"></div>
+      </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+    <script src="jquery-3.0.0.js"></script>
+
+    <script src="app.js"></script>
   </body>
 </html>
