added content into container1

--- a/WEBD1121_Unit13_Jordan_Pals/index.html
+++ b/WEBD1121_Unit13_Jordan_Pals/index.html
@@ -8,12 +8,22 @@
     , initial-scale=1.0"
     />
     <title>WEBD1121_Unit13_Jordan_Pals</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Caveat&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="jquery-3.0.0.js" />
     <link rel="stylesheet" href="app.js" />
   </head>
+
   <body>
-    <div class="container1"></div>
+    <div class="container1">
+        <h1 class="title">Scroll Down</h1>
+        <span class="material-symbols-outlined">
+            arrow_downward
+            </span>
+    </div>
     <div class="container2">
       <div class="container3">
         <div id="box1"></div>
