--- a/WEBD1121_Unit13_Jordan_Pals/index.html
+++ b/WEBD1121_Unit13_Jordan_Pals/index.html
@@ -19,16 +19,16 @@
 
   <body>
     <div class="container1">
-        <h1 class="title">Scroll Down</h1>
+        <h1 class="title">Lorena</h1>
         <span class="material-symbols-outlined">
             arrow_downward
             </span>
     </div>
     <div class="container2">
       <div class="container3">
-        <div id="box1"></div>
-        <div id="box2"></div>
-        <div id="box3"></div>
+        <div id="box1"> <p class="word">I</p></div>
+        <div id="box2"> <p class="word">Love</p></div>
+        <div id="box3"> <p class="word">You</p></div>
       </div>
     </div>
 
