--- a/Final1123_Jordan_Pals/index.html
+++ b/Final1123_Jordan_Pals/index.html
@@ -6,6 +6,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
+<script src="jquery-3.7.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="app.js">
     <link rel="stylesheet" href="jquery-3.7.1.js">
@@ -31,10 +36,18 @@
         </div>
     </div> 
 
-    <div id="block1"></div>
+    <div id="block1">
+        <ul>
+            <li>
+                <button id="but3">Learn More</button>
+            </li>
+            <li>
+                <button id="but4">Learn More</button>
+            </li>
+        </ul>
+    </div>
     <div id="contentbottom">
     <article>
-    <p>This is my favorite animal ever because they are so cute and they jump in the air to hunt!</p>
 
 <div class="bottomstuff">
 
@@ -65,4 +78,7 @@
 </body>
 <script src="jquery-3.7.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </html>
