--- a/Final1123_Jordan_Pals/index.html
+++ b/Final1123_Jordan_Pals/index.html
@@ -3,14 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
-<script src="jquery-3.7.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="app.js">
     <link rel="stylesheet" href="jquery-3.7.1.js">
@@ -27,6 +19,7 @@
                 <button id="but2">AHHHHH</button>
             </li>
         </ul>
+        <iframe id="vid" width="560" height="315" src="https://www.youtube.com/embed/lpaMmEFuAy8?si=aZK9wsb_cv-xpkJc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </header>
     <div class="background">
         <div class="contentwrap">
@@ -53,12 +46,18 @@
 
     <div class="circlediv">
  <img class="circlepic" src="style/images/heisacircle.jpg" alt="Arctic Fox in a circle">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac velit cursus, ornare tortor tempor, cursus metus. Sed lobortis odio nec odio hendrerit, eget eleifend tellus luctus. Ut dictum in ex eget aliquet. Praesent viverra gravida ornare. Morbi ut mi et massa pellentesque rutrum et vitae diam. Cras eget est augue. Integer vitae ligula et magna finibus fermentum nec eget mi. Fusce dictum sodales vulputate. Maecenas et purus id dui elementum pulvinar sit amet et eros.</p>
+<p id="p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac velit cursus, ornare tortor tempor, cursus metus. Sed lobortis odio nec odio hendrerit, eget eleifend tellus luctus. Ut dictum in ex eget aliquet. Praesent viverra gravida ornare. Morbi ut mi et massa pellentesque rutrum et vitae diam. Cras eget est augue. Integer vitae ligula et magna finibus fermentum nec eget mi. Fusce dictum sodales vulputate. Maecenas et purus id dui elementum pulvinar sit amet et eros.
+
+    <button id="hide1"> HIDE</button>
+</p>
     </div>
 
     <div class="jumpingdiv">
 <img class="jumpingpic" src="style/images/hejumps.jpg" alt="Arctic Fox Hunting">
-<p>Maecenas fermentum at ante id malesuada. Morbi sed semper mauris, quis scelerisque magna. Donec efficitur tincidunt purus, sit amet maximus ante tristique vel. Sed lectus tellus, sodales ac bibendum eget, laoreet a leo. Suspendisse ac bibendum est, vel feugiat diam. Donec elementum consectetur elit dignissim pulvinar. Nam posuere nisi non porttitor dictum. Donec commodo turpis velit, ut eleifend elit pulvinar eu. Proin nunc dolor, egestas vestibulum tempus imperdiet, dictum quis sem. Aliquam ullamcorper commodo porttitor. Cras magna ante, eleifend in sem ut, consectetur ultricies magna. Etiam dignissim, ante posuere dignissim ultricies, quam risus ultrices nisi, a varius eros est nec nisl. Mauris placerat nulla ut ante iaculis, id luctus dui ultrices. Vestibulum nec lectus sit amet nibh euismod dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+<p id="p2">Maecenas fermentum at ante id malesuada. Morbi sed semper mauris, quis scelerisque magna. Donec efficitur tincidunt purus, sit amet maximus ante tristique vel. Sed lectus tellus, sodales ac bibendum eget, laoreet a leo. Suspendisse ac bibendum est, vel feugiat diam. Donec elementum consectetur elit dignissim pulvinar. Nam posuere nisi non porttitor dictum. Donec commodo turpis velit, ut eleifend elit pulvinar eu. Proin nunc dolor, egestas vestibulum tempus imperdiet, dictum quis sem. Aliquam ullamcorper commodo porttitor. Cras magna ante, eleifend in sem ut, consectetur ultricies magna. Etiam dignissim, ante posuere dignissim ultricies, quam risus ultrices nisi, a varius eros est nec nisl. Mauris placerat nulla ut ante iaculis, id luctus dui ultrices. Vestibulum nec lectus sit amet nibh euismod dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+
+    <button id="hide2"> HIDE</button>
+</p>
     </div>
    
     </div>
@@ -74,11 +73,11 @@
         <span>Jordan Pals &copy;</span>
     </footer>
 </div>
-    
-</body>
-<script src="jquery-3.7.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
+<script src="jquery-3.7.1.js"></script>
+<script src="app.js"></script>
+</body>
+
 </html>
